pushing everything up

--- a/cna_affected.qmd
+++ b/cna_affected.qmd
@@ -90,7 +90,6 @@ mklab <- function (x, bytes = FALSE) {
 
 ```
 
-
 ```{r}
 varlist <- read_parquet(here("cache", "cveparse", "variables.parquet"))
 
@@ -120,17 +119,15 @@ expected <- c("affected" = 'array of product',
 
 # Detailed view of Affected Products (container.cna.affected)
 
-This view is specifically focused on `container.cna.affected`.  The table below shortened all of the variables
-so the `container.cna.` portion is truncated. 
+This view is specifically focused on `container.cna.affected`. The table below shortened all of the variables so the `container.cna.` portion is truncated.
 
- * `JSON Field` is the compound name of the JSON data element
- * `CVEs` count of unique CVE identifiers with the `JSON Field`
- * `CVE Percent` percent of total CVEs 
- * `CNAs` count of unique CNA short names providing the `JSON Field`
- * `CNA Percent`  percent of total CVEs 
- * `JSON Type Discovered` the type of json data present in the data 
- * `JSON Schema` what the JSON schema defines the data to be, if this is not present there is no definition of the `JSON Field" in the JSON schema. 
- 
+-   `JSON Field` is the compound name of the JSON data element
+-   `CVEs` count of unique CVE identifiers with the `JSON Field`
+-   `CVE Percent` percent of total CVEs
+-   `CNAs` count of unique CNA short names providing the `JSON Field`
+-   `CNA Percent` percent of total CVEs
+-   `JSON Type Discovered` the type of json data present in the data
+-   `JSON Schema` what the JSON schema defines the data to be, if this is not present there is no definition of the \`JSON Field" in the JSON schema.
 
 ```{r}
 cves <- read_parquet(here("cache/cveparse/cves.parquet")) %>% 
@@ -233,7 +230,6 @@ knitr::kable(gtable, format = "html",
 
 ```
 
-
 ```{r}
 one <- affdata %>% 
   mutate(across(where(is.character), function(x) gsub("^n/a$", NA_character_, x)))
@@ -249,13 +245,9 @@ versions <- one %>%
 
 ```
 
-## Affected vendor, product, version and/or package name or repository. 
+## Affected vendor, product, version and/or package name or repository.
 
-These fields represent the minimum necessary to identify the vulnerable product(s) or software. The table below identifies 
-How many CVEs and CNAs have non-null values in the field. One thing to note: the "version" is represented by a JSON object 
-and this code looks for anything specified in the "versions" object while ignoring the 
-`containers.cna.affected.versions.status` since almost every record had that value with nothing else specified in this section. 
-
+These fields represent the minimum necessary to identify the vulnerable product(s) or software. The table below identifies How many CVEs and CNAs have non-null values in the field. One thing to note: the "version" is represented by a JSON object and this code looks for anything specified in the "versions" object while ignoring the `containers.cna.affected.versions.status` since almost every record had that value with nothing else specified in this section.
 
 ```{r fig.width=7, fig.height=4}
 one <- affdata %>% 
@@ -301,7 +293,6 @@ gg <- ggplot(tocna, aes(cat, id, fill=filler, label=txt)) +
 gg
 ```
 
-
 ```{r}
 if(!file.exists(here("cache", "cpe_dict_2.3.parquet"))) {
   if(!file.exists(here("cache", "official-cpe-dictionary_v2.3.xml"))) {
@@ -327,12 +318,11 @@ uniq_vendor_product <- cpedict %>% distinct(vendor, product) %>% nrow() %>% comm
 
 ```
 
+## Are the vendor and product defined in the CPE dictionary?
 
-## Are the vendor and product defined in the CPE dictionary? 
+This grabs the CPE dictionary from [NVD](https://nvd.nist.gov/feeds/xml/cpe/dictionary/official-cpe-dictionary_v2.3.xml.gz) and will first check the value provided "as is" against the same value in the CPE dictionary. Second, it does a case-insensitive match against the defined values in the CPE.
 
-This grabs the CPE dictionary from [NVD](https://nvd.nist.gov/feeds/xml/cpe/dictionary/official-cpe-dictionary_v2.3.xml.gz) and will first check the value provided "as is" against the same value in the CPE dictionary. Second, it does a case-insensitive match against the defined values in the CPE. 
-
-CPE Dict 2.3 has `r uniq_vendor` unique vendors and `r uniq_vendor_product` unique combinations of vendor and product. 
+CPE Dict 2.3 has `r uniq_vendor` unique vendors and `r uniq_vendor_product` unique combinations of vendor and product.
 
 ```{r}
 one <- affdata %>% 
@@ -457,12 +447,9 @@ gg <- ggplot(toplot, aes(x=pct, y=match, fill=match, label=txt)) +
 gg
 ```
 
-
 ## When are CVEs published with vendor, product and version (VPV)?
 
-This next plot treats a "complete" record if any of the "affected" records has a value
-in the `vendor` AND `product` AND `versions`. It is not inspecting those fields for quality, 
-just that something in present. Again, the `containers.cna.affected.versions.status` is being ignored. 
+This next plot treats a "complete" record if any of the "affected" records has a value in the `vendor` AND `product` AND `versions`. It is not inspecting those fields for quality, just that something in present. Again, the `containers.cna.affected.versions.status` is being ignored.
 
 ```{r}
 toplot <- one %>% 
@@ -501,14 +488,13 @@ gg
 #         height = 3.5, width = 7, open = FALSE, caption=TRUE, dpi=300)
 ```
 
+## Which CNAs are published more complete VPV values?
 
-## Which CNAs are published more complete VPV values? 
+This looks at the percent of CVEs with a complete VPV record from each CNA and compares against the total number of CVEs from that CNA.
 
-This looks at the percent of CVEs with a complete VPV record from each CNA and compares against the total number of CVEs from that CNA. 
+Take note just how many CNAs are across the bottom (or the lack of CNAs at the bottom). This indicates that almost every CNA has been able to produce a complete VPV record.
 
-Take note just how many CNAs are across the bottom (or the lack of CNAs at the bottom). This indicates that almost every CNA has been able to produce a complete VPV record. 
-
-`mitre` as a CNA really sticks out here. 
+`mitre` as a CNA really sticks out here.
 
 ```{r}
 toplot <- one %>% 
@@ -553,7 +539,7 @@ gg
 #         height = 3.5, width = 7, open = FALSE, caption=FALSE, dpi=300)
 ```
 
-## Timing of complete VPV records without CVEs published by MITRE 
+## Timing of complete VPV records without CVEs published by MITRE
 
 ```{r}
 toplot <- one %>% 
@@ -591,7 +577,6 @@ gg <- ggplot(toplot, aes(month, pct, color=colfill)) +
 gg
 ```
 
-
 # collection URL
 
 ```{r}
@@ -622,8 +607,6 @@ gg <- ggplot(url_pub, aes(month, pct, color=colfill)) +
   theme(plot.title = element_text(family=mainfont, face="italic", size=11))
 gg
 ```
-
-
 
 ```{r}
 toplot <- one %>% 
@@ -669,8 +652,6 @@ gg <- ggplot(toplot, aes(n, pct, label=cna)) +
 gg
 
 ```
-
-
 
 ```{r}
 newcna <- cvecna %>% left_join(cvepub, by="cve") %>% 
@@ -761,7 +742,6 @@ gg <- ggplot(toplot, aes(n, pct, label=cna)) +
 gg
 ```
 
-
 ## affected.cpes
 
 ```{r}
@@ -790,7 +770,6 @@ gg <- ggplot(url_pub, aes(month, pct, color=colfill)) +
 
 gg
 ```
-
 
 ```{r}
 toplot <- one %>% 
@@ -831,7 +810,6 @@ gg <- ggplot(toplot, aes(n, pct, label=cna)) +
 gg
 
 ```
-
 
 ```{r}
 newcna <- cvecna %>% left_join(cvepub, by="cve") %>% 
@@ -876,4 +854,3 @@ gg <- ggplot(toplot, aes(n, pct, label=cna)) +
 
 gg
 ```
-
